--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -53,11 +53,15 @@ eng:
       sort: "Sort custom field choices"
     dashboards:
       accountancy: "Accountancy dashboard"
-      finances: "Finances dashboard"
-      general: "General dashboard"
+      finances: "Finances dashboard" #?
+      general: "General dashboard" #?
       production: "Production dashboard"
+      # purchases: "Purchases dashboard"
       relations: "Relations dashboard"
-      trade: "Trade dashboard"
+      # sales: "Sales dashboard"
+      # settings: "Settings dashboard"
+      # stocks: "Stocks dashboard"
+      trade: "Trade dashboard" #?
       welcome: "Welcome on Ekylibre"
     delays:
       edit: "Edit the delay: %{name}"
