Cleans rights and menus

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -15,7 +15,7 @@ eng:
       new: "Add a postal area"
     assets:
       cede: "Cede %{name}" #?
-      depreciate: "Compute depreciations of %{name}"
+      depreciate: "Compute depreciations of %{name}" #?
       edit: "Edit asset: %{name}"
       index: "Assets"
       new: "New asset"
