Adds missing translations for financial assets. Fixes #17.

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -717,6 +717,7 @@ arb:
     address: "العنوان"
     admin: "مسؤول النظام"
     agency_code: "رمز الوكالة"
+    # allocation_account: "Allocation account"
     amount: "القيمة من دون الضرائب"
     amount_with_taxes: "القيمة مع كامل الضرائب" #?
     annotation: "ملاحظة"
@@ -728,6 +729,7 @@ arb:
     areas: "الرموز البريدية"
     arrived_on: "وصل يوم"
     # asset: "Asset"
+    # asset_amount: "Accountable value"
     # asset_depreciations: "Asset depreciations"
     # assets: "Assets"
     assimilated_taxes_amount: "قيمة الضرائب المماثلة"
@@ -775,6 +777,7 @@ arb:
     # ceded: "Ceded"
     # ceded_on: "Ceded on"
     changes_reflected: "انعكاس التغييرات"
+    # charges_account: "Charges account"
     charges_accounts: "حسابات الحمولة"
     check_number: "رقم الشيك"
     # check_state: "Check state"
@@ -980,6 +983,7 @@ arb:
     filesize: "حجم الملف"
     # filtered_columns: "Filtered columns"
     financial_year: "السنوات المالية"
+    # financial_year_as_last: "Financial year (as last journal entry)"
     financial_year_id: "مهنة" #?
     financial_years: "المهن"
     finish: "النهاية"
@@ -1059,6 +1063,7 @@ arb:
     language: "اللغة"
     last_bank_statement: "(((LAST_BANK_STATEMENT)))"
     last_cweek: "الاسبوع السابق"
+    # last_journal_entry: "Journal entry of end of year"
     last_letter: "الرسالة الاخيرة"
     last_month: "الشهر السابق"
     last_name: "اسم العائلة"
