--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -322,6 +322,7 @@ jpn:
     # address: "Address"
     # admin: "Admin"
     # agency_code: "Agency code"
+    # allocation_account: "Allocation account"
     # amount: "Amount"
     # annotation: "Annotation"
     # area: "Area"
@@ -330,6 +331,7 @@ jpn:
     # areas: "Areas"
     # arrived_on: "Arrived on"
     # asset: "Asset"
+    # asset_amount: "Accountable value"
     # asset_depreciations: "Asset depreciations"
     # assets: "Assets"
     # assimilated_taxes_amount: "Assimilated taxes amount"
@@ -373,6 +375,7 @@ jpn:
     # ceded: "Ceded"
     # ceded_on: "Ceded on"
     # changes_reflected: "Changes reflected"
+    # charges_account: "Charges account"
     # charges_accounts: "Charges accounts"
     # check_number: "Check number"
     # check_state: "Check state"
@@ -543,6 +546,7 @@ jpn:
     # filesize: "Filesize"
     # filtered_columns: "Filtered columns"
     # financial_year: "Financial year"
+    # financial_year_as_last: "Financial year (as last journal entry)"
     # financial_years: "Financial years"
     # finish: "Finish"
     # first_financial_year: "First financial year"
@@ -612,6 +616,7 @@ jpn:
     # language: "Language"
     # last_bank_statement: "Last bank statement"
     # last_cweek: "Last cweek"
+    # last_journal_entry: "Journal entry of end of year"
     # last_letter: "Last letter"
     # last_month: "Last month"
     # last_name: "Last name"
