--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,8 +1,12 @@
 ekylibre (0.4.0) stable; urgency=low
 
-  * Migrates to Rails 3.2.2
+  * Migrates to Rails 3.2.8
+  * Adds asset management
+  * Reviews Interface
+  * Adds more CSS3
+  * Fixes bugs on backup/restore due to unfound tmp
 
- -- Brice Texier <brice.texier@ekylibre.org>  Tue, 21 Feb 2012 15:11:32 +0200
+ -- Brice TEXIER <brice.texier@ekylibre.org>  Fri, 07 Sep 2012 10:45:05 +0200
 
 ekylibre (0.3.2.1) stable; urgency=low
 
