--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -79,7 +79,7 @@ spa:
       # finances: "Finances dashboard"
       # general: "General dashboard"
       # production: "Production dashboard"
-      # relations: "Relations dashboard"
+      # relationship: "Relationship dashboard"
       # trade: "Trade dashboard"
       # welcome: "Welcome on Ekylibre"
     delays:
@@ -914,7 +914,7 @@ spa:
       # general: "General"
       # home: "Home"
       # production: "Production"
-      # relations: "Relations"
+      # relationship: "Relationship"
       submenus:
         # accounts: "Accounts"
         # assets: "Assets"
