--- a/config/locales/fra/help/listings-index.txt
+++ b/config/locales/fra/help/listings-index.txt
@@ -3,9 +3,9 @@
 Les extractions de données permettent de produire des tableaux au format CSV à partir de toutes les données enregistrées dans la base de données.
 Le système d'extraction sert de base pour l'envoi de courriels en nombre.
 
-  * {{theme:buttons/action.png}} permet d'extraire le tableau au format CSV
-  * {{theme:buttons/nomail.png}} permet d'extraire le tableau qui ne contient pas d'adresse e-mail (au format CSV)
-  * {{theme:buttons/mail.png}} permet d'accéder à la page d'envoi de mail. Pour pouvoir avoir le bouton, il faut qu'une colonne **e-mail** soit présente au niveau de l'extraction.
-  * {{theme:buttons/duplicate.png}} permet de dupliquer l'extraction
+  * {{theme:icons/action.png}} permet d'extraire le tableau au format CSV
+  * {{theme:icons/nomail.png}} permet d'extraire le tableau qui ne contient pas d'adresse e-mail (au format CSV)
+  * {{theme:icons/mail.png}} permet d'accéder à la page d'envoi de mail. Pour pouvoir avoir le bouton, il faut qu'une colonne **e-mail** soit présente au niveau de l'extraction.
+  * {{theme:icons/duplicate.png}} permet de dupliquer l'extraction
 
 
