--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,3 +1,9 @@
+ekylibre (0.4.1) stable; urgency=low
+
+  * Changes dependencies to Ruby 1.9
+
+ -- Brice TEXIER <brice.texier@ekylibre.org>  Sun, 07 Oct 2012 20:33:10 +0200
+
 ekylibre (0.4.0) stable; urgency=low
 
   * Migrates to Rails 3.2.8
