--- a/README.rdoc
+++ b/README.rdoc
@@ -16,10 +16,13 @@ We encourage you to contribute to Ekylibre.
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
-== Build Status {<img src="https://secure.travis-ci.org/ekylibre/ekylibre.png?branch=0-4-stable"/>}[http://travis-ci.org/ekylibre/ekylibre]
+== Build Status {<img src="https://secure.travis-ci.org/ekylibre/ekylibre.png?branch=master"/>}[http://travis-ci.org/ekylibre/ekylibre]
+
+== Dependency Status {<img src="https://gemnasium.com/ekylibre/ekylibre.png"/>}[https://gemnasium.com/ekylibre/ekylibre]
+
+== Code Climate {<img src="https://codeclimate.com/badge.png"/>}[https://codeclimate.com/github/ekylibre/ekylibre]
 
 == License
 
 Ekylibre is released under the GNU/GPL3 license:
 * http://opensource.org/licenses/GPL-3.0
-
