progress on Tutorial "A week on Ekylibre"

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -12,6 +12,8 @@ fra:
     animals:
       index: "Gestion des animaux"
       new: "Créer un animal"
+      edit: "Modifier un animal"
+      show: "animal %{name}"
     areas:
       edit: "Modifier la zone postale\_: %{name}"
       index: "Zones postales"
