Refactors menu system with new XML format and multi-depth hierarchy.

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -83,6 +83,7 @@ eng:
       sort: "Sort custom field choices"
     dashboards:
       accountancy: "Accountancy dashboard"
+      # config: "Config dashboard"
       finances: "Finances dashboard" #?
       general: "General dashboard" #?
       # index: "Index dashboard"
