add more icons in form

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -514,6 +514,7 @@ fra:
     direct_links: "Liens directs"
     direction: "Type"
     direction_label: "Type"
+    diseases: "Maladies"
     discount_rate: "Taux d’escompte"
     district: "Zone administrative"
     districts: "Zones administratives"
@@ -948,6 +949,7 @@ fra:
     transporter_sales: "Ventes de transporteurs"
     transporters: "Transporteurs"
     transports: "Transports"
+    treatment: "Traitement"
     type: "Type"
     # unconfirmed_stock_transfers: "Unconfirmed stock transfers"
     # undelivered_incoming_deliveries: "Undelivered incoming deliveries"
@@ -985,6 +987,7 @@ fra:
     # waiting_transporters: "Waiting transporters"
     warehouse: "Lieu de stockage"
     warehouses: "Lieux de stockage"
+    watcher: "Observateur"
     webpass: "Mot de passe web"
     website: "Site web"
     weight: "Poids (kg)"
