second pass & cleanning translations

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -234,6 +234,13 @@ eng:
       account: "Account"
       account_balance: "Account balance"
       # animal: "Animaux"
+      # animal_event: "Evenements liés aux animaux"
+      # animal_event_nature: "Type d'évènement lié aux animaux"
+      # animal_group: "Lot"
+      # animal_race: "Race"
+      # animal_race_nature: "Espèce"
+      # animal_treatment: "Traitement"
+      # animal_treatment_use: "Dose lié à un traitement"
       area: "Area"
       asset: "Asset"
       asset_depreciation: "Asset depreciation"
@@ -250,10 +257,15 @@ eng:
       department: "Department"
       deposit: "Deposit"
       deposit_line: "Deposit line"
+      # diagnostic: "Diagnostic"
+      # disease: "Maladie"
       district: "District"
       document: "Document"
       document_template: "Document template"
+      # drug: "Médicament"
+      # drug_nature: "Type de médicament"
       entity: "Person"
+      # entity_address: "Adresse"
       entity_category: "Person category"
       entity_link: "Person link"
       entity_link_nature: "Person link type"
@@ -292,6 +304,7 @@ eng:
       outgoing_payment_mode: "Disbursement mode"
       outgoing_payment_use: "Disbursement part"
       preference: "Preference"
+      # prescription: "Ordonnance"
       price: "Price"
       product: "Product"
       product_category: "Product category"
@@ -317,6 +330,7 @@ eng:
       tax: "Tax"
       tax_declaration: "Tax declaration"
       tool: "Tool"
+      # tool_nature: "Type d'équipements"
       tracking: "Tracking"
       tracking_state: "Tracking state"
       transfer: "Transfer"
@@ -337,12 +351,16 @@ eng:
     activity_code: "Activity code"
     actual_number: "Actual number"
     address: "Address"
+    # addresses: "Adresses"
     admin: "Admin"
+    # age_max: "Age maximum"
+    # age_min: "Age minimum"
     agency_code: "Agency code"
     allocation_account: "Allocation account"
     amount: "Amount"
     # animal: "Animaux"
     animal_cares: "Animal cares" #?
+    # animal_events: "Evenement des animaux"
     # animal_group: "Lot"
     animals: "Animals"
     annotation: "Annotation"
@@ -420,6 +438,7 @@ eng:
     closed: "Closed"
     closed_on: "Closed on"
     code: "Code"
+    # code_aee: "Code normalisé EDI*"
     code2: "Code2"
     coefficient: "Coefficient"
     collected_account: "Account collected"
@@ -478,6 +497,7 @@ eng:
     decimal_min: "Decimal min"
     decimal_value: "Decimal value"
     declared_on: "Declared on"
+    # default_address: "Coordonnée par défaut"
     default_contact: "Default contact"
     default_currency: "Default currency"
     default_stock: "Default stock"
@@ -532,10 +552,18 @@ eng:
     downpayment_rate: "Downpayment rate"
     # draft: "Brouillard"
     # draft_mode: "Mode brouillard"
+    # drug: "Médicament"
+    # drug_admission_path: "Drug admission path"
+    # drug_allowed: "Médicament utilisable sans prescription"
     drugs: "Drugs"
     duration: "Duration"
+    # duration_unit_wait_for_meat: "Duration unit wait for meat"
+    # duration_unit_wait_for_milk: "Duration unit wait for milk"
+    # duration_wait_for_meat: "Temps d'attente avant remise en vente (Viande)"
+    # duration_wait_for_milk: "Temps d'attente avant remise en vente (Lait)"
     ean13: "Ean13"
     email: "Email"
+    # emails: "Courriels (e-mails)"
     emitter_amount: "Emitted amount"
     emitter_cash: "Emitter cash"
     emitter_currency: "Emitter currency"
@@ -560,6 +588,7 @@ eng:
     entry_lines: "Entry lines"
     establishment: "Establishment"
     establishments: "Establishments"
+    # event: "Event"
     event_natures: "Event types"
     events: "Events"
     examinated_at: "Examinated at"
@@ -593,6 +622,7 @@ eng:
     for_productions: "For productions"
     for_purchases: "For purchases"
     for_sales: "For sales"
+    # frequency: "Frequency"
     full_name: "Full name"
     full_name_format: "Full name format"
     function_title: "Function title"
@@ -701,6 +731,7 @@ eng:
     name: "Name"
     name_1_to_2: "Name 1 to 2"
     name_2_to_1: "Name 2 to 1"
+    # name_aee: "Nom normalisé EDI*"
     nature: "Nature"
     nature_code: "Type code"
     nature_label: "Type label"
@@ -767,6 +798,9 @@ eng:
     payments_count: "Payments count"
     payments_to_deposit: "Payments to deposit"
     payments_to_deposit_accounts: "Payments to deposit accounts"
+    # per_animal_unit: "Per animal unit"
+    # per_duration_time_unit: "Per duration time unit"
+    # per_frequency_time_unit: "Per frequency time unit"
     period: "Period"
     period_name: "Period name"
     phone: "Phone"
@@ -781,6 +815,13 @@ eng:
     position: "Position"
     postcode: "Postcode"
     preferences: "Preferences"
+    # pregnant: "Pleine"
+    # prescripted: "sur ordonnance"
+    # prescripted_on: "prescrit le"
+    # prescription: "Ordonnance"
+    # prescription_number: "référence de l’ordonnance"
+    # prescriptions: "Ordonnances"
+    # prescriptor: "Vétérinaire"
     pretax_amount: "Pre-tax amount"
     price: "Price"
     price_amount: "Price amount"
@@ -821,7 +862,10 @@ eng:
     quantity: "Quantity"
     quantity_max: "Quantity max"
     quantity_min: "Quantity min"
+    # quantity_unit: "Quantity unit"
     query: "Query"
+    # race: "Race"
+    # races: "Races"
     range: "Range"
     # rate: "Taux de change"
     reason: "Reason"
@@ -927,6 +971,7 @@ eng:
     suspended: "Suspended"
     # symbol: "Symbole"
     symmetric: "Symmetric"
+    # symptoms: "Symptomes"
     target: "Target"
     target_quantity: "Target quantity"
     target_type: "Target type"
@@ -959,6 +1004,7 @@ eng:
     transporters: "Transporters"
     transports: "Transports"
     # treatment: "Traitement"
+    # treatment_uses: "Treatment uses"
     # treatments: "Treatments"
     type: "Type" #?
     unconfirmed_stock_transfers: "Unconfirmed stock transfers" #?
@@ -985,6 +1031,7 @@ eng:
     used_amount: "Used amount"
     useful_lines: "Useful lines" #?
     user: "User"
+    # username: "Identifiant"
     users: "Users"
     uses: "Uses"
     value: "Value"
