--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -34,6 +34,11 @@ fra:
       index: "Races"
       new: "Créer une race"
       show: "Race\_: %{name}"
+    animal_treatment_uses:
+      edit: "Modifier la dose de traitement donnée"
+      index: "Dose de traitement donnée"
+      new: "Nouvelle dose de traitement"
+      show: "Dose de traitement\_: %{name}"
     animal_treatments:
       edit: "Modifier le traitement\_: %{name} "
       index: "Traitements"
@@ -111,10 +116,10 @@ fra:
       show: "Remise en banque %{number} du %{created_on}"
       unvalidateds: "Remises en banque non validées"
     diagnostics:
-      # edit: "Edit diagnostic"
-      # index: "Index diagnostic"
-      # new: "New diagnostic"
-      # show: "Show diagnostic"
+      edit: "Modifier un diagnostic"
+      index: "Diagnostic"
+      new: "Nouveau diagnostic"
+      show: "Diagnostic\_: %{name}"
     diseases:
       edit: "Modifier la maladie\_: %{name}"
       index: "Maladies"
@@ -150,8 +155,8 @@ fra:
       new: "Nouvelle fiche client/fournisseur"
       show: "Fiche\_: %{full_name}"
     entity_addresses:
-      # edit: "Edit entity address"
-      # new: "New entity address"
+      edit: "Modifier une coordonnée"
+      new: "Ajouter une coordonnée"
     entity_categories:
       edit: "Modifier la catégorie de fiche\_: %{name}"
       index: "Catégories de fiche"
@@ -301,6 +306,11 @@ fra:
       index: "Décaissements"
       new: "Ajout d’un décaissement"
       show: "Décaissement n°%{number} pour %{payee}"
+    prescriptions:
+      edit: "Modifier une ordonnance"
+      index: "Ordonnance"
+      new: "Nouvelle ordonnance"
+      show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
     prices:
       edit: "Modifie le prix %{pretax_amount}/%{amount} sur %{product}"
       export: "Exporter les prix"
@@ -436,10 +446,10 @@ fra:
       index: "Taxes"
       new: "Ajouter une nouvelle taxe"
     tool_natures:
-      # edit: "Edit tool nature"
-      # index: "Index tool nature"
-      # new: "New tool nature"
-      # show: "Show tool nature"
+      edit: "Modifier un type de matériel"
+      index: "Type de matériel / équipement"
+      new: "Nouveau type de matériel"
+      show: "Type de matériel\_: %{name}"
     tools:
       edit: "Modifier le matériel\_: %{name}"
       index: "Matériel"
@@ -478,8 +488,9 @@ fra:
     animal_event_natures: "Type d'évenements des Animaux"
     animal_events: "Evenements des Animaux"
     animal_groups: "Lot d'Animaux"
-    # animal_race_natures: "Animal race natures"
-    # animal_races: "Animal races"
+    animal_race_natures: "Espèces animales"
+    animal_races: "Races"
+    animal_treatment_uses: "Doses de traitement"
     animal_treatments: "Soins des Animaux"
     animals: "Animaux"
     application: "Application"
@@ -500,15 +511,15 @@ fra:
     departments: "Services"
     deposit_lines: "Lignes de remise en banque"
     deposits: "Remises en banque"
-    # diagnostics: "Diagnostics"
+    diagnostics: "Diagnostics"
     diseases: "Maladies"
     districts: "Zones administratives"
     document_templates: "Modèles de document"
     documents: "Documents"
-    # drug_natures: "Drug natures"
+    drug_natures: "Types de médicaments"
     drugs: "Médicaments"
     entities: "Personnes"
-    # entity_addresses: "Entity addresses"
+    entity_addresses: "Adresses"
     entity_categories: "Catégories de fiche"
     entity_link_natures: "Types de lien"
     entity_links: "Liens entre personnes"
@@ -550,6 +561,7 @@ fra:
     outgoing_payment_uses: "Utilisations des décaissements"
     outgoing_payments: "Décaissements"
     preferences: "Préférences"
+    prescriptions: "Ordonnances"
     prices: "Prix"
     product_categories: "Catégories de produits"
     product_components: "Composants de produits"
@@ -763,8 +775,8 @@ fra:
     debit: "Débit"
     decimal_case: "Options pour un décimal"
     default_subject: "[%{company}]"
-    delay_update: "Modifier le délai"
     delay: "Délais"
+    delay_update: "Modifier le délai"
     delete: "Supprimer"
     deliver: "Valider l’envoi des livraisons"
     deliveries: "Livraisons"
@@ -1498,7 +1510,7 @@ fra:
     changes_have_not_been_reflected: "Les changements n’ont pas pu être correctement répercutés sur l’état des stocks actuel"
     closed_financial_years: "L’exercice a été correctement clôturé"
     columns_are_already_uses: "Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois"
-    draft_entry_lines_are_validated:
+    draft_entry_lines_are_validated: 
       one: "%{count} ligne de brouillard validée"
       other: "%{count} lignes de brouillard validées"
       zero: "Aucune ligne de brouillard validée"
@@ -1569,7 +1581,7 @@ fra:
     unvalid_version_for_restore: "La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel"
     update_is_done: "La mise à jour a été effectuée"
     validates_old_inventories: "Il est conseillé de supprimer ou de valider les inventaires non validés avant d’en faire un nouveau"
-    x_unpointed_journal_entry_lines:
+    x_unpointed_journal_entry_lines: 
       one: "Il y a une écriture à pointer"
       other: "Il y a %{count} écritures à pointer"
       zero: "Il n’y a pas d’écritures à pointer pour l’instant"
