--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -9,6 +9,10 @@ fra:
         pregnant: "Surveillance de la gestation"
       animal_race:
         code: "Code race"
+      animal_treatment_use:
+        per_animal_unit: " / "
+        quantity_unit: "Unité"
+        drug_admission_path: "Voie d’admission"
       asset_depreciation:
         asset_amount: "Valeur nette comptable (VNC)"
       cash:
@@ -234,12 +238,13 @@ fra:
       account: "Compte"
       account_balance: "Balance de compte"
       animal: "Animaux"
-      # animal_event: "Animal event"
-      # animal_event_nature: "Animal event nature"
-      # animal_group: "Animal group"
-      # animal_race: "Animal race"
-      # animal_race_nature: "Animal race nature"
-      # animal_treatment: "Animal treatment"
+      animal_event: "Evenements liés aux animaux"
+      animal_event_nature: "Type d'évènement lié aux animaux"
+      animal_group: "Lot"
+      animal_race: "Race"
+      animal_race_nature: "Espèce"
+      animal_treatment: "Traitement"
+      animal_treatment_use: "Dose lié à un traitement"
       area: "Zone postale"
       asset: "Immobilisation"
       asset_depreciation: "Amortissement d’immobilisation"
@@ -256,15 +261,15 @@ fra:
       department: "Service"
       deposit: "Remise en banque"
       deposit_line: "Ligne de remise en banque"
-      # diagnostic: "Diagnostic"
-      # disease: "Disease"
+      diagnostic: "Diagnostic"
+      disease: "Maladie"
       district: "Zone administrative"
       document: "Document"
       document_template: "Modèle de document"
-      # drug: "Drug"
-      # drug_nature: "Drug nature"
+      drug: "Médicament"
+      drug_nature: "Type de médicament"
       entity: "Personne"
-      # entity_address: "Entity address"
+      entity_address: "Adresse"
       entity_category: "Catégorie de personne"
       entity_link: "Lien de personne"
       entity_link_nature: "Nature de lien entre personnes"
@@ -303,6 +308,7 @@ fra:
       outgoing_payment_mode: "Mode de décaissement"
       outgoing_payment_use: "Affectation de décaissement"
       preference: "Préférence"
+      prescription: "Ordonnance"
       price: "Prix"
       product: "Produit"
       product_category: "Catégorie de produit"
@@ -328,7 +334,7 @@ fra:
       tax: "Taxe"
       tax_declaration: "Déclaration de taxes"
       tool: "Outil"
-      # tool_nature: "Tool nature"
+      tool_nature: "Type d'équipements"
       tracking: "Lot traçable"
       tracking_state: "État de lot"
       transfer: "Transfert"
@@ -349,16 +355,16 @@ fra:
     activity_code: "Code APE/NAF"
     actual_number: "Numéro en cours"
     address: "Adresse"
-    # addresses: "Addresses"
+    addresses: "Adresses"
     admin: "Administrateur système"
-    # age_max: "Age max"
-    # age_min: "Age min"
+    age_max: "Age maximum"
+    age_min: "Age minimum"
     agency_code: "Code guichet"
     allocation_account: "Compte de dotation"
     amount: "Montant"
     animal: "Animaux"
+    animal_events: "Evenement des animaux"
     animal_group: "Lot"
-    # animal_groups: "Animal groups"
     animals: "Animals"
     annotation: "Annotation"
     area: "Zone postale"
@@ -436,7 +442,7 @@ fra:
     closed_on: "Date de clôture"
     code: "Code"
     code2: "Code secondaire"
-    # code_aee: "Code aee"
+    code_aee: "Code normalisé EDI*"
     coefficient: "Coefficient"
     collected_account: "TVA collectée"
     collected_amount: "TVA brute"
@@ -495,7 +501,7 @@ fra:
     decimal_min: "Intervalle bas"
     decimal_value: "Valeur décimale"
     declared_on: "Déclarée le"
-    # default_address: "Default address"
+    default_address: "Coordonnée par défaut"
     default_contact: "Contact par défaut"
     default_currency: "Devise par défaut"
     default_stock: "Stock par défaut"
@@ -551,14 +557,18 @@ fra:
     downpayment_rate: "Taux acompte"
     draft: "Brouillard" #?
     draft_mode: "Mode brouillard" #?
-    # drug: "Drug"
+    drug: "Médicament"
+    drug_admission_path: "Drug admission path"
+    drug_allowed: "Médicament utilisable sans prescription"
     drugs: "Médicaments"
     duration: "Durée"
-    # duration_wait_for_meat: "Duration wait for meat"
-    # duration_wait_for_milk: "Duration wait for milk"
+    duration_unit_wait_for_meat: "Duration unit wait for meat"
+    duration_unit_wait_for_milk: "Duration unit wait for milk"
+    duration_wait_for_meat: "Temps d'attente avant remise en vente (Viande)"
+    duration_wait_for_milk: "Temps d'attente avant remise en vente (Lait)"
     ean13: "Code EAN13"
     email: "Courriel (e-mail)" #?
-    # emails: "Emails"
+    emails: "Courriels (e-mails)"
     emitter_amount: "Montant émis"
     emitter_cash: "Trésorerie émettrice"
     emitter_currency: "Devise émise" #?
@@ -583,7 +593,7 @@ fra:
     entry_lines: "Lignes d’écritures"
     establishment: "Établissement"
     establishments: "Établissements" #?
-    # event: "Event"
+    event: "Event"
     event_natures: "Types d’évènement" #?
     events: "Évènements"
     examinated_at: "Examiné le"
@@ -618,7 +628,7 @@ fra:
     for_productions: "Produit fabriqué ou récolté"
     for_purchases: "Produit acheté"
     for_sales: "Produit vendu"
-    # frequency: "Frequency"
+    frequency: "Frequency"
     full_name: "Nom complet"
     full_name_format: "Format du nom complet"
     function_title: "Civilités"
@@ -749,7 +759,7 @@ fra:
     name: "Nom"
     name_1_to_2: "Personne 1 ⇒ Personne 2"
     name_2_to_1: "Personne 2 ⇒ Personne 1"
-    # name_aee: "Name aee"
+    name_aee: "Nom normalisé EDI*"
     nature: "Type"
     nature_code: "Code"
     nature_label: "Type"
@@ -817,7 +827,9 @@ fra:
     payments_count: "Nb. encaissements"
     payments_to_deposit: "Encaissements à encaisser" #?
     payments_to_deposit_accounts: "Comptes des encaissements à encaisser"
-    # per_unit: "Per unit"
+    per_animal_unit: "Per animal unit"
+    per_duration_time_unit: "Per duration time unit"
+    per_frequency_time_unit: "Per frequency time unit"
     period: "Périodicité"
     period_name: "Périodicité"
     phone: "Téléphone" #?
@@ -833,9 +845,13 @@ fra:
     position: "Position"
     postcode: "Code postal"
     preferences: "Préférences"
-    # pregnant: "Pregnant"
-    # prescription_number: "Prescription number"
-    # prescriptor: "Prescriptor"
+    pregnant: "Pleine"
+    prescripted: "sur ordonnance"
+    prescripted_on: "prescrit le"
+    prescription: "Ordonnance"
+    prescription_number: "référence de l’ordonnance"
+    prescriptions: "Ordonnances"
+    prescriptor: "Vétérinaire"
     pretax_amount: "Montant HT"
     price: "Prix"
     price_amount: "Montant HT"
@@ -872,9 +888,10 @@ fra:
     quantity: "Quantité"
     quantity_max: "Quantité maximum"
     quantity_min: "Quantité minimum"
+    quantity_unit: "Quantity unit"
     query: "Requête"
-    # race: "Race"
-    # races: "Races"
+    race: "Race"
+    races: "Races"
     range: "Intervalle"
     rate: "Taux de change" #?
     reason: "Motif"
@@ -982,7 +999,7 @@ fra:
     suspended: "Suspendu"
     symbol: "Symbole" #?
     symmetric: "Symétrique"
-    # symptoms: "Symptoms"
+    symptoms: "Symptomes"
     target: "Parcelle"
     target_quantity: "Quantité cible"
     target_type: "Type de cible"
@@ -1015,6 +1032,7 @@ fra:
     transporters: "Transporteurs"
     transports: "Transports"
     treatment: "Traitement"
+    treatment_uses: "Treatment uses"
     treatments: "Treatments"
     undelivered_quantity: "Reste à livrer"
     unique_tracking: "Numéro unique"
@@ -1036,7 +1054,7 @@ fra:
     used_amount: "Montant utilisé"
     # useful_lines: "Useful lines"
     user: "Utilisateur"
-    # username: "Username"
+    username: "Identifiant"
     users: "Utilisateurs"
     uses: "Matériels utilisés"
     value: "Valeur"
